--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar {
+  width:6px;
+}
+
+/* track */
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
+}
+
+/* handle  */
+::-webkit-scrollbar-thumb {
+  background:#888;
+}
+ 
+/* handle on hover  */
+::-webkit-scrollbar-track:hover {
+  background:#555;
+}
