--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+  /* -webkit-font-smoothing: antialiased; */
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -12,21 +12,21 @@ code {
     monospace;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width:6px;
-}
+} */
 
 /* track */
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background: #e0e0e0;
-}
+} */
 
 /* handle  */
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
   background:#888;
-}
+} */
  
 /* handle on hover  */
-::-webkit-scrollbar-track:hover {
+/* ::-webkit-scrollbar-track:hover {
   background:#555;
-}
+} */
