--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,17 +1,17 @@
 .material-symbols-outlined {
   font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48
+    'FILL'0,
+    'wght'400,
+    'GRAD'0,
+    'opsz'48
 }
 
 .material-symbols-outlined {
   font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48
+    'FILL'0,
+    'wght'400,
+    'GRAD'0,
+    'opsz'48
 }
 
 Link {
@@ -145,16 +145,18 @@ Link {
     width: 50px;
   }
 }
+
 /* product detail card style OVER */
 
 
 /* Add to cart page style START */
-.app-2   {
+.app-2 {
   max-width: 1200px;
   width: 100%;
   margin: 100px auto;
   box-shadow: 0 0 5px #ccc;
 }
+
 .details-2 {
   display: flex;
   justify-content: space-around;
@@ -265,7 +267,37 @@ section .cart {
   margin-left: 50px;
   color: crimson;
 }
+
 /* Add to cart page style OVER */
 
+.loader {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20%;
+  width: 80px;
+  height: 80px;
+  padding-left: 0;
+}
 
+.loader::after {
+  content: ' ';
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fa9c23;
+  border-color: #fa9c23 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
 
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
