--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -308,7 +308,7 @@ section .cart {
  * Panels
  */
 /*** General styles ***/
-.panel {
+/* .panel {
   box-shadow: none;
 }
 .panel-heading {
@@ -342,7 +342,7 @@ form label {
 .form-horizontal .form-group {
   margin-left: -15px;
   margin-right: -15px;
-}
+} */
 @media (min-width: 768px) {
   .form-horizontal .control-label {
     text-align: right;
